crates/cli/tests/snapshots/lib__run_test@divide_by_zero.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - /Users/christoph/code/nemo-lang/crates/cli/tests/run/divide_by_zero.nemo
    - "--output"
    - tests/build/passing/divide_by_zero.wasm
input_file: crates/cli/tests/run/divide_by_zero.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
