crates/cli/tests/snapshots/lib__run_test@expr_postfix.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\expr_postfix.nemo"
    - "--output"
    - tests/build/passing/expr_postfix.wasm
input_file: crates/cli/tests/run/expr_postfix.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
