crates/cli/tests/snapshots/lib__run_test@global_annotation.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\global_annotation.nemo"
    - "--output"
    - tests/build/passing/global_annotation.wasm
input_file: crates/cli/tests/run/global_annotation.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[15] Error:[0m Type mismatch. Expected f32, but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m  │[0m                  ┬  
 [38;5;240m  │[0m                  ╰── Type mismatch. Expected f32, but got i32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected bool, but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m  │[0m                   ┬  
 [38;5;240m  │[0m                   ╰── Type mismatch. Expected bool, but got i32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected unit, but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mu[0m[38;5;249mn[0m[38;5;249mi[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m  │[0m                   ┬  
 [38;5;240m  │[0m                   ╰── Type mismatch. Expected unit, but got i32
[38;5;246m───╯[0m

[31m[07] Error:[0m Unknown type Struct
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0mStruct[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m0[0m
 [38;5;240m  │[0m            ───┬──  
 [38;5;240m  │[0m               ╰──── Unknown type Struct
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected [i32], but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m[[0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m  │[0m                    ┬  
 [38;5;240m  │[0m                    ╰── Type mismatch. Expected [i32], but got i32
[38;5;246m───╯[0m

[31m[07] Error:[0m Unknown type Struct
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m[[0m[38;5;249m[[0mStruct[38;5;249m][0m[38;5;249m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m0[0m
 [38;5;240m  │[0m              ───┬──  
 [38;5;240m  │[0m                 ╰──── Unknown type Struct
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected [[ERROR]], but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m[[0m[38;5;249m[[0m[38;5;249mS[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249mc[0m[38;5;249mt[0m[38;5;249m][0m[38;5;249m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m  │[0m                         ┬  
 [38;5;240m  │[0m                         ╰── Type mismatch. Expected [[ERROR]], but got i32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected fn () -> unit, but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m8 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mu[0m[38;5;249mn[0m[38;5;249mi[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m  │[0m                           ┬  
 [38;5;240m  │[0m                           ╰── Type mismatch. Expected fn () -> unit, but got i32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected fn (i32) -> f32, but got i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m9 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m  │[0m                             ┬  
 [38;5;240m  │[0m                             ╰── Type mismatch. Expected fn (i32) -> f32, but got i32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected fn (i32, f32, fn (i32) -> i32) -> f32, but got i32
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m10 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m0
 [38;5;240m   │[0m                                                  ┬  
 [38;5;240m   │[0m                                                  ╰── Type mismatch. Expected fn (i32, f32, fn (i32) -> i32) -> f32, but got i32
[38;5;246m────╯[0m

Error: "Compiling failed with 10 errors"
