crates/cli/tests/snapshots/lib__run_test@if.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/passing/if.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/if.nemo
---
success: true
exit_code: 0
----- stdout -----
1
2
0

----- stderr -----
