crates/cli/tests/snapshots/lib__run_test@if.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\if.nemo"
    - "--output"
    - tests/build/passing/if.wasm
input_file: crates/cli/tests/run/if.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
