crates/cli/tests/snapshots/lib__run_test@infix_op.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/passing/infix_op.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/infix_op.nemo
---
success: true
exit_code: 0
----- stdout -----
2
3
2
2
2
11
2
0

----- stderr -----
