crates/cli/tests/snapshots/lib__run_test@literals.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\literals.nemo"
    - "--output"
    - tests/build/passing/literals.wasm
input_file: crates/cli/tests/run/literals.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
