crates/cli/tests/snapshots/lib__run_test@modules.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\run\\modules.nemo"
    - "--output"
    - tests/build/passing/modules.wasm
input_file: crates/cli/tests/run/modules.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[13] Error:[0m Unknown field. S does not have a field named x
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m26 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249md[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249m:[0m[38;5;249m:[0m[38;5;249mS[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249md[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249m:[0m[38;5;249m:[0m[38;5;249mS[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0mx[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m   │[0m                             ┬  
 [38;5;240m   │[0m                             ╰── Unknown field. S does not have a field named x
[38;5;246m────╯[0m

[31m[14] Error:[0m Missing field. S.y was not provided
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m26 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249md[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249m:[0m[38;5;249m:[0m[38;5;249mS[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249md[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249m:[0m[38;5;249m:[0mS[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m   │[0m                         ┬  
 [38;5;240m   │[0m                         ╰── Missing field. S.y was not provided
[38;5;246m────╯[0m

[31m[15] Error:[0m Type mismatch. Expected S, but got V
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m26 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249md[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249m:[0m[38;5;249m:[0m[38;5;249mS[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mdep::S { x = 10 }[38;5;249m;[0m
 [38;5;240m   │[0m                    ────────┬────────  
 [38;5;240m   │[0m                            ╰────────── Type mismatch. Expected S, but got V
[38;5;246m────╯[0m

[31m[15] Error:[0m Type mismatch. Expected S, but got S
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m27 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249md[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249m:[0m[38;5;249m:[0m[38;5;249mf[0m[38;5;249m([0ms[38;5;249m,[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m   │[0m          ┬  
 [38;5;240m   │[0m          ╰── Type mismatch. Expected S, but got S
[38;5;246m────╯[0m

[31m[13] Error:[0m Unknown field. S does not have a field named x
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m28 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249md[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249m:[0m[38;5;249m:[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mg[0m[38;5;249m([0m[38;5;249ms[0m[38;5;249m.[0mx[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m   │[0m              ┬  
 [38;5;240m   │[0m              ╰── Unknown field. S does not have a field named x
[38;5;246m────╯[0m

Error: "Compiling failed with 5 errors"
